Revert "Fixes OOUI widget visibility within VE surface"
This reverts commit ca9b2274dc33e09c26ccbd4b76835510bc7c23cb.

Reason for revert: No longer needed now VE supports dark mode.

--- a/skinStyles/ext.visualEditor.less
+++ b/skinStyles/ext.visualEditor.less
@@ -5,18 +5,3 @@
 		display: none;
 	}
 }
-
-// T365050
-.skin-theme-clientpref-night {
-	.ve-ce-surface .oo-ui-widget {
-		filter: invert( 1 );
-	}
-}
-
-@media ( prefers-color-scheme: dark ) {
-	html.skin-theme-clientpref-os {
-		.ve-ce-surface .oo-ui-widget {
-			filter: invert( 1 );
-		}
-	}
-}
